--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html --public-url ./ ",
     "deploy": "npm run build && cp ./dist/first-contrib-project.html ./dist/200.html && surge"
   },
   "dependencies": {
