--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel index.html --open",
     "build": "parcel build index.html --public-url ./ ",
     "deploy": "npm run build && cp ./dist/first-contrib-project.html ./dist/200.html && surge"
   },
@@ -17,6 +17,11 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "loaders.css": "^0.1.2",
+    "lodash.escape": "^4.0.1",
+    "lodash.flatten": "^4.4.0",
+    "lodash.orderby": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
+    "lodash.throttle": "^4.1.1",
     "time-ago": "0.2.1"
   },
   "devDependencies": {
