--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "transform-class-properties"
+  ],
+  "presets": [
+    "env",
+    "react"
   ]
 }
