--- a/package.json
+++ b/package.json
@@ -16,17 +16,29 @@
     "apollo-link-http": "^1.5.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "history": "^4.7.2",
     "loaders.css": "^0.1.2",
     "lodash.escape": "^4.0.1",
     "lodash.flatten": "^4.4.0",
     "lodash.orderby": "^4.6.0",
-    "lodash.sortby": "^4.7.0",
-    "lodash.throttle": "^4.1.1",
+    "preact": "^8.2.9",
+    "preact-compat": "^3.18.0",
+    "preact-router": "^2.6.0",
+    "react-apollo": "^2.1.3",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "time-ago": "0.2.1"
   },
+  "alias": {
+    "react": "preact-compat",
+    "react-dom": "preact-compat"
+  },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "parcel-bundler": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.7.1"
   },
   "keywords": []
 }
