--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel index.html --public-url / --open",
     "build": "parcel build index.html --public-url https://first-contrib.surge.sh",
     "deploy": "rm -rf ./dist && npm run build --public-url https://first-contrib.surge.sh && cp ./dist/index.html ./dist/200.html && rm ./dist/index.html && surge -p ./dist -d first-contrib.surge.sh",
-    "logs": "parcel build index.html --no-cache --detailed-report --optimize-minimize"
+    "logs": "parcel build index.html --no-cache --detailed-report"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.11",
@@ -17,7 +17,6 @@
     "apollo-link-http": "^1.5.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
-    "history": "^4.7.2",
     "loaders.css": "^0.1.2",
     "lodash.flatten": "^4.4.0",
     "lodash.orderby": "^4.6.0",
@@ -25,7 +24,6 @@
     "preact-compat": "^3.18.0",
     "preact-router": "^2.6.0",
     "react-apollo": "^2.1.3",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "time-ago": "0.2.1"
   },
